Bug 1121033 - Respect mozpasspointerevents when building event regions. r=roc